--- a/document/book.bib
+++ b/document/book.bib
@@ -457,7 +457,7 @@ of personal strategy development by dictation students.}
   month = oct,
   year = {2017},
   pages = {347-359},
-  file = {/Users/davidjohnbaker/Zotero/storage/7DMKNNUP/Buonviri - 2017 - Effects of Two Listening Strategies for Melodic Di.pdf},
+  file = {/Users/davidjohnbaker/Zotero/storage/3ZIHE2XJ/klonoski2000.pdf;/Users/davidjohnbaker/Zotero/storage/7DMKNNUP/Buonviri - 2017 - Effects of Two Listening Strategies for Melodic Di.pdf},
   annote = {Not much differences in writing between or after
 
 Big part of this is such high level!
@@ -793,6 +793,160 @@ Root
   keywords = {Brain,Human Information Storage,Neuroimaging,Short Term Memory},
   file = {/Users/davidjohnbaker/Zotero/storage/WJMENG4B/2005-16061-000.html},
   doi = {10.4324/9780203342398}
+}
+
+@article{nicholsScoreOneJazz2018a,
+  title = {Score One for Jazz: {{Working}} Memory in Jazz and Classical Musicians.},
+  volume = {28},
+  issn = {2162-1535, 0275-3987},
+  shorttitle = {Score One for Jazz},
+  doi = {10.1037/pmu0000211},
+  abstract = {Jazz musicians rely on different skills than do classical musicians for successful performances. We investigated the working memory span of classical and jazz student musicians on musical and nonmusical working memory tasks. College-aged musicians completed the Bucknell Auditory Imagery Scale, followed by verbal working memory tests and musical working memory tests that included visual and auditory presentation modes and written or played recall. Participants were asked to recall the last word (or pitch) from each task after a distraction task, by writing, speaking, or playing the pitch on the piano. Jazz musicians recalled more pitches that were presented in auditory versions and recalled on the piano compared with classical musicians. Scores were positively correlated to years of jazz-playing experience. We conclude that type of training should be considered in studies of musical expertise, and that tests of musicians' cognitive skills should include domain-specific components.},
+  language = {en},
+  number = {2},
+  journal = {Psychomusicology: Music, Mind, and Brain},
+  author = {Nichols, Bryan E. and W\"ollner, Clemens and Halpern, Andrea R.},
+  month = jun,
+  year = {2018},
+  pages = {101-107},
+  file = {/Users/davidjohnbaker/Zotero/storage/Y5629IW4/Nichols et al. - 2018 - Score one for jazz Working memory in jazz and cla.pdf}
+}
+
+@article{colleyWorkingMemoryAuditory2017,
+  title = {Working Memory and Auditory Imagery Predict Sensorimotor Synchronisation with Expressively Timed Music},
+  volume = {71},
+  issn = {1747-0218, 1747-0226},
+  doi = {10.1080/17470218.2017.1366531},
+  abstract = {Sensorimotor synchronisation (SMS) is prevalent and readily studied in musical settings, as most people are able to perceive and synchronise with a beat (e.g., by finger tapping). We took an individual differences approach to understanding SMS to real music characterised by expressive timing (i.e., fluctuating beat regularity). Given the dynamic nature of SMS, we hypothesised that individual differences in working memory and auditory imagery\textemdash{}both fluid cognitive processes\textemdash{}would predict SMS at two levels: (1) mean absolute asynchrony (a measure of synchronisation error) and (2) anticipatory timing (i.e., predicting, rather than reacting to beat intervals). In Experiment 1, participants completed two working memory tasks, four auditory imagery tasks, and an SMS-tapping task. Hierarchical regression models were used to predict SMS performance, with results showing dissociations among imagery types in relation to mean absolute asynchrony, and evidence of a role for working memory in anticipatory timing. In Experiment 2, a new sample of participants completed an expressive timing perception task to examine the role of imagery in perception without action. Results suggest that imagery vividness is important for perceiving and control is important for synchronising with irregular but ecologically valid musical time series. Working memory is implicated in synchronising by anticipating events in the series.},
+  language = {en},
+  number = {8},
+  journal = {Quarterly Journal of Experimental Psychology},
+  author = {Colley, Ian D and Keller, Peter E and Halpern, Andrea R},
+  month = aug,
+  year = {2017},
+  pages = {1781-1796},
+  file = {/Users/davidjohnbaker/Zotero/storage/Y5PSCHK6/Colley et al. - 2018 - Working memory and auditory imagery predict sensor.pdf}
+}
+
+@article{schellenbergMusicNonmusicalAbilities2017,
+  title = {Music and {{Nonmusical Abilities}}},
+  abstract = {Reports that exposure to music causes benefits in nonmusical domains have received widespread attention in the mainstream media. Such reports have also influenced public policy. The so-called ``Mozart effect'' actually refers to two relatively distinct phenomena. One concerns short-term increases in spatial abilities that are said to occur from listening to music composed by Mozart. The other refers to the possibility that formal training in music yields nonmusical benefits. A review of the relevant findings indicates that the shortterm effect is small and unreliable. Moreover, when it is evident, it can be explained by between-condition differences in the listener's mood or levels of cognitive arousal. By contrast, the effect of music lessons on nonmusical aspects of cognitive development is still an open question. Several studies have reported positive associations between formal music lessons and abilities in nonmusical (e.g., linguistic, mathematical, and spatial) domains. Nonetheless, compelling evidence for a causal link remains elusive.},
+  language = {en},
+  author = {Schellenberg, E Glenn},
+  year = {2017},
+  pages = {17},
+  file = {/Users/davidjohnbaker/Zotero/storage/E4MH6RE3/Schellenberg - Music and Nonmusical Abilities.pdf}
+}
+
+@article{corrigallMusicTrainingCognition2013,
+  title = {Music {{Training}}, {{Cognition}}, and {{Personality}}},
+  volume = {4},
+  issn = {1664-1078},
+  doi = {10.3389/fpsyg.2013.00222},
+  abstract = {Although most studies that examined associations between music training and cognitive abilities had correlational designs, the prevailing bias is that music training causes improvements in cognition. It is also possible, however, that high-functioning children are more likely than other children to take music lessons, and that they also differ in personality. We asked whether individual differences in cognition and personality predict who takes music lessons and for how long. The participants were 118 adults (Study 1) and 167 10- to 12-year-old children (Study 2). We collected demographic information and measured cognitive ability and the Big Five personality dimensions. As in previous research, cognitive ability was associated with musical involvement even when demographic variables were controlled statistically. Novel findings indicated that personality was associated with musical involvement when demographics and cognitive ability were held constant, and that openness-to-experience was the personality dimension with the best predictive power. These findings reveal that: (1) individual differences influence who takes music lessons and for how long, (2) personality variables are at least as good as cognitive variables at predicting music training, and (3) future correlational studies of links between music training and non-musical ability should account for individual differences in personality.},
+  language = {en},
+  journal = {Frontiers in Psychology},
+  author = {Corrigall, Kathleen A. and Schellenberg, E. Glenn and Misura, Nicole M.},
+  year = {2013},
+  file = {/Users/davidjohnbaker/Zotero/storage/2ZLB2XGK/Corrigall et al. - 2013 - Music Training, Cognition, and Personality.pdf}
+}
+
+@article{swaminathanRevisitingAssociationMusic2017,
+  title = {Revisiting the Association between Music Lessons and Intelligence: {{Training}} Effects or Music Aptitude?},
+  volume = {62},
+  issn = {01602896},
+  shorttitle = {Revisiting the Association between Music Lessons and Intelligence},
+  doi = {10.1016/j.intell.2017.03.005},
+  abstract = {We examined whether the link between intelligence and musical expertise is better explained by formal music lessons or music aptitude. Musically trained and untrained adults completed tests of nonverbal intelligence (Raven's Advanced Progressive Matrices) and music aptitude (Musical Ear Test). They also provided information about their history of music lessons and socioeconomic status (SES). Duration of music training was associated positively with SES (mother's education), nonverbal intelligence, melody aptitude, and rhythm aptitude. Intelligence and music aptitude were also positively associated. The association between music training and intelligence remained evident after controlling for SES, but it disappeared after controlling for music aptitude. By contrast, music aptitude had a strong correlation with intelligence even after accounting for music training and SES. Thus, the association between music training and intelligence may arise because high-functioning individuals are more likely than other individuals to have good aptitude for music and to take music lessons.},
+  language = {en},
+  journal = {Intelligence},
+  author = {Swaminathan, Swathi and Schellenberg, E. Glenn and Khalil, Safia},
+  month = may,
+  year = {2017},
+  pages = {119-124},
+  file = {/Users/davidjohnbaker/Zotero/storage/EL7GUV4D/Swaminathan et al. - 2017 - Revisiting the association between music lessons a.pdf}
+}
+
+@article{klonoskiPerceptualLearningHierarchy2000,
+  title = {A {{Perceptual Learning Hierarchy}}: {{An Imperative}} for {{Aural Skills Pedagogy}}},
+  volume = {4},
+  language = {en},
+  journal = {College Music Symposium},
+  author = {Klonoski, Edward},
+  year = {2000},
+  pages = {168-169},
+  file = {/Users/davidjohnbaker/Zotero/storage/AVR4AJPU/Klonoski - 2000 - A Perceptual Learning Hierarchy An Imperative for.pdf},
+  annote = {Author argues that aural skills needs to learn from cognition research and one of the reasons that this might not be as effective as it should be is that the order that we learn things in theory is not nessecarily linked to any sort of perceptual hierarchy in terms of learning.}
+}
+
+@article{klonoskiImprovingDictationAuralSkills2006,
+  title = {Improving {{Dictation}} as an {{Aural}}-{{Skills Instructional Tool}}},
+  language = {en},
+  author = {Klonoski, Edward},
+  year = {2006},
+  pages = {6},
+  file = {/Users/davidjohnbaker/Zotero/storage/DTYP2REJ/Klonoski - Improving Dictation as an Aural-Skills Instruction.pdf},
+  annote = {What specific defecincy is revealed with an incorrect response in melodic dicatation settings
+
+~
+
+Quote from another article about dictation not being relevant to the lives of professional musicians -- what a tool! Potter - 1990 JMTP
+
+Article also notes lack of transfer to other things that probably matter
+
+Article ends with suggesting actual ways to get better at things}
+}
+
+@article{potterIdentifyingSucessfulDictation1990,
+  title = {Identifying {{Sucessful Dictation Strategies}}},
+  volume = {4},
+  number = {1},
+  journal = {Journal of Music Theory Pedagogy},
+  author = {Potter, Gary},
+  year = {1990},
+  pages = {63-72},
+  annote = {Bad quote about guy getting surprised that people were not good at dictating things after they took a class in it
+
+~
+
+~}
+}
+
+@article{karpinskiModelMusicPerception1990,
+  title = {A {{Model}} for {{Music Perception}} and {{Its Implications}} in {{Melodic Dictation}}},
+  volume = {4},
+  number = {1},
+  journal = {Journal of Music Theory Pedagogy},
+  author = {Karpinski, Gary},
+  year = {1990},
+  pages = {191-229}
+}
+
+@article{pembrookSendHelpAural1990,
+  title = {"{{Send Help}}!": {{Aural Skills Instruction}} in {{U}}.{{S}}. {{Colleges}} and {{Universities}}},
+  volume = {4},
+  number = {1},
+  journal = {Journal of Music Theory Pedagogy},
+  author = {Pembrook, Randall G. and Riggins, H. Lee},
+  year = {1990},
+  pages = {230-241},
+  annote = {Survey on what people were using in the late 1980s in terms of aural skills pedagogy
+
+~
+
+~}
+}
+
+@article{butlerBridgesUnbuiltComparing1993,
+  title = {Bridges {{Unbuilt}}: {{Comparing}} the {{Literatures}} of {{Music Cognition}} and {{Aural Training}}},
+  volume = {14},
+  number = {2},
+  journal = {Indiana Theory Review},
+  author = {Butler, David and Lochstampfor, Mark},
+  pages = {1-17},
+  annote = {More people complaining about lack of link between aural skills and music cognition research
+
+~}
 }
 
 
