--- a/document/01-theoretical-bkgrd-rationale.Rmd
+++ b/document/01-theoretical-bkgrd-rationale.Rmd
@@ -1,163 +1,33 @@
 # Theoretical Background and Rationale {#intro}
 
-
-## Theoretical Background and Rationale
-
-As stated above, melodic dictation is a hugely complex process.
-
-
-What am I going to do in this chapter?
-  + Intro to aural skills and melodic dictation 
-  + Talk about the factors that go into it (basically real time suduko)
-    + Cognitive
-    + Musical 
-  + Note that reserach is messy, need to think of it polymorphically
- 
-
-Even anecdoatal evidence suggests that people who are good at this tend to stay good and people who are bad at it tend to stay bad
-
-Other things that I might not want to bring up right now is that a lot of this could just be thought of as relating to a big thought experiemnt where you could imagine that there are many musicians from lots of different muscial cultures (bring in the ethnos!) that could imagine being sucessful at what they do without having this ability to take melodic dicatation.
-Is it just a party trick? 
-Also here would be a good place to jump off of and talk about the lack of transfer.
-
-Where do people learn it? -- Music school
-Part of large thing of aural skills 
-Absoulte ubiquity, but for the amount that it is done, relatively understudied
-
-   
-
-Not only is this process intenstive, but also ubiquitous 
-
-## 
-
-@karpinskiAuralSkillsAcquisition2000 schematizes this ability into a four step process of hear, remember, understand, notate (See Figure 1?).
-
-While 
-Some researchers have estimated that XX amount of processes are needed to sucessfully execute this task FIND CITATION. 
-
--- Should be drawing here from ICMPC paper?
-
-## Order of Chapter 1
-
-* Hook on why this is important
-* What is melodic dictation?
-  + Process (reasons of why factors)
-  + Who has talked about it before?
-  + Why is it important -- training ear and transfer
-* Most of the people who are talking about this are pedagogical, really it's perceptual 
-* Here is huge list of literature of things that might contribute
-  + Pedagogical factors
-  + Cognitive Factors
-  + Musical Factors 
-  + All of these are moving parts, need better tools to describe
-* While this is the narrative, does not conform to updated view of polymorphism of musicianship
-
-## Order of Chapter 2
-
-* Most of this literature comes from pedagogy
-* All quotes about people should be able to do this
-* Long history of Aural Skills 
-  + Older people
-  + Current Methods
-  + Their goals 
-  + Their assumptions 
-
-+ People are not good at this 
-  + Wennerstronm (1989) said people at IU are not good at aural skills and sight singing p.163 (k7)
-  + Julliard (1953,p. 48) incoming students have untrained ear (k7)
-  
-+ nice quote from chittum 1967 "the da is past when teachers can say, you either have it or you don't" (p.73)
-+ Start of a big Journey back then, even more now (almost 2 decades since Karpinski, 2000)
- 
- 
-### Theoretical Background
-
-Lots of older studies looking at this listed on page 2 of Taylor and Pembrook 1983 (List here)
-
-#### Computational Musicology 
-
-#### Music Psychology and Memory for Melody
-
-### Rationale 
-
-#### Computational Musicology
-
-#### Music Psychology 
-
-### Factors
-
-This section will list factors that are believed to be important to modeling melodic dictation.
-Need to have both individual and musical parameters.
-Ends with polymorphic view of musicianship.
-  + Nichols, Wolner, Halpern 2018
-  + Niels paper on Jazz similarity
-  + My paper on Wagner 
-
-
-+++++++++++++
-Pitch in Karpinki 
-
-+ Pitch Matching (Work being done with Seatle, Pfordresher)
-+ Pitch Memory (See Snyder)
-+ Pitch Collection and Chunking 
-+ Infereing Tonic
-+ Melodic Contour 
-+ Scale Degrees 
-+ Identification of Intervals
-+ Identifcaiton of Scale Types 
-+ Solimization Systems 
-+ AP
-
-+++++++++++++++++++
-Melodic Dictation 
-
-Kraft 1999 -- First part of book is for melodic dictation
-Benward and Lolosick 1996a -- Melodic Dictation
-
-Karpinski 1990 Has its own model for melodic perception?? 
-
-Page 66 of K -- Relevant Melodic Contour Information 
-page 68 of K -- Deutsch -- Familiar systems are better (now we have IDyOM)
-Dowling and Harwood 1986 124-44 Melodic expectancy (probably better for Pearce)
-READ Sloboda and Parker 1985
-
-THURSDAY FOLLOW UP!
-Follow Ups of Note Max 
-  + Tallarico 1974
-  + Long 1977
-  + Pembrook 1983
-  
-7-11 Notes? 
-Marple ND reports that most things land in 7 +/-2, But not mention of IC! 
-Found that if you make it rhythmic, goes up to 6-10, rhythm helps, but maybe it's just shorter time
-
-Potter 1980 -- most people chunk (obvs question of segmentation)
-Deutsch 1980 rhtym alines with pich, people do better than non-hierarchy 
-Oura 1991 -- MODEL OF HOW MANY PITCHES PEOPLE REMEMBER, use for corpus question on pattern matching
-
-Hofsetter 1981 -- people do better in bottom 4 time than 8 (again maybe confounded by IC)
-
-Page 98 in Karpinksi has lenght and number of playings, 
-
-Effect of tempo in  Unks, Bowers, and Eagle 1993
-
-figure 3.1 is Karpinski method to understand dictation process
-
-
-
-+++++++++++++++
-Define the rationale and significance for this study
-talk about what the processes are that go into this 
-What are the implicit transfer claims of this? 
-    + discussed in chapter 2 (history and rationale, Karpinski)
-    + transfer literature also dicussed in chapter 2
-Is there literature specifically on this? Yes, but scant.
-
-
-what contributes to this whole process?
-
-Note that there are two fields, both of which's literature can help out.
-
-
-===================
-63 words at start 
+## What is melodic dictation? 
+### Describe process
+### Karpinski schematic of it (as verbal model, problems)
+#### Verbal model, has problems, OK for pedagogy
+#### Verbal model, no individual differnces tho literture to suggest
+#### Computational model to be introduced
+### Clearly this is psychological problem with different item level difficulty   
+#### Individual Factors to contribute 
+#### Musical factors to contribute
+#### Make a Model of them 
+## Cognitive Factors (MT and it selection bias)
+### Working Memory Capacity
+#### Papers that suggest WMC plays a role
+### General Fluid Intelligence
+#### Papers that suggest GF plays a role
+### Long term memory and corpus with implicit
+### Musical Training 
+### Aural Training 
+## Musical Factors
+### Not first to model structure
+### Early papers of Ortmann
+### Papers from 1980s 
+### Buonviri Papers
+### FANTASTIC papers and findings
+## Modeling and Polymorphism of Ability (End Chapter)
+### Draw from MMD ICMCP on problems with LV model 
+### Thought experiments on why musicianship is bad concept in general
+### Polymophic, component process makes you think about things in models
+## Conclusions
+### Clearly we have factors that are thought to contribute, need to investigate them in full with each chapter
+### Not before first looking at why we are doing it in the first place (--transition to Chapter 2)
