--- a/document/02-history-current-aural.Rmd
+++ b/document/02-history-current-aural.Rmd
@@ -1,56 +1,22 @@
 # History of Aural Skills 
 
-## First Establish Others think this is Important 
-
-### Historical Evidence 
-
-### Current Evidence 
-
-## Solimization
-
-### What is Solimization 
-
-### Brief History of it 
-
-## Current State of Aural Skills
-
-+ Guy that just wrote that dissertation on it in England 
-
-
-History of Aural Skills a lot from other sources
-  + Karpinski (Schumann, Smith, Benward and Car, Benward and Kolosick, Butler 1997)
-  + Wolf and Colleagues
-  + Best-- thinking 'in' music 1992
-  + Serafine 1988 thinking in or with sound / 
-  + Elliott 1996 thinking about music without 'understanding'
-  === These all really just have to do with mental representation? 
-  
-  Karpinski -- "Music listeners who understaqnd what htey hear are thinking in music" <-- claim page 4
-    + could imagine a thought experiment where understanding implicit and explicit knowledge of this
-
-Karpinski notes that (Butler and Lochstampfor, 1993) no link between pedagogy and music cognition.
-
-
-## Old Farts To Talk About 
-
-- Guido of Arezzo
-- Gioseffo Zarlino 
-- Franchinus Gaffurius
-- C.P.E. Bach
-- Jean-Philippe Rameou
-- Arnold Schoenberg
-- Heinrich Schenker 
-
-- Adriano Banchieri <-- first to fix guido's hexachord 
-- Hubert Walerant (via Calvisius)
-
-- Timothy Johnson's Article on solimization 
-- Gregory Barnett - cambridge guide, 17th Century Organization
-- Lorenzo Penna 
-
-  
-* Compare and contrast goals in terms of pedagogy and teaching. 
-
-## Current State 
-
-* Books and what not. 
+## Thesis: Show that aural skills always has practical end, efficacy of representation of musical pitch
+### for i in star aural people do
+### Who
+### Where
+### When
+### What 
+### How (approach and goals)
+### Why
+### Guido d'Arezzo
+### Walerant (via Calvisius)
+### Banchieri 
+### Cerratto
+### Penna
+### Zarlino 
+## Quotes from Schumann 
+## Carl Seashore thinking in music 
+## Points from Karpinski on pedagogy
+## Points from Royal Paper on pedagogy
+## Solmization System
+## Really this is all question of efficacy of mental representation of musical pitch
