start to sketch chapter 1 2000 words

--- a/document/book.bib
+++ b/document/book.bib
@@ -949,4 +949,62 @@ Article ends with suggesting actual ways to get better at things}
 ~}
 }
 
+@article{pearceAuditoryExpectationInformation2012,
+  title = {Auditory {{Expectation}}: {{The Information Dynamics}} of {{Music Perception}} and {{Cognition}}},
+  volume = {4},
+  issn = {17568757},
+  shorttitle = {Auditory {{Expectation}}},
+  doi = {10.1111/j.1756-8765.2012.01214.x},
+  abstract = {Following in a psychological and musicological tradition beginning with Leonard Meyer, and continuing through David Huron, we present a functional, cognitive account of the phenomenon of expectation in music, grounded in computational, probabilistic modeling. We summarize a range of evidence for this approach, from psychology, neuroscience, musicology, linguistics, and creativity studies, and argue that simulating expectation is an important part of understanding a broad range of human faculties, in music and beyond.},
+  language = {en},
+  number = {4},
+  journal = {Topics in Cognitive Science},
+  author = {Pearce, Marcus T. and Wiggins, Geraint A.},
+  month = oct,
+  year = {2012},
+  pages = {625-652},
+  file = {/Users/davidjohnbaker/Zotero/storage/C9XWNJIA/Pearce and Wiggins - 2012 - Auditory Expectation The Information Dynamics of .pdf},
+  annote = {Great article with lots of references
+
+Expectations are learned
+
+Stems from Huron and Meyer
+
+Examples of statistical learning in kids and non-human primates
+
+Music should also then be related to general auditory processing mechanisms
+
+READ wiggins et al 1989 on why music should function like abelian group
+
+Get shannon 1948 citation
+
+List of citations as first people to use information theory and music in 2.3
+
+worth noting at some point that IDyOM is strongly bottom up, tho clearly there are top down processes that are involved in musical expectation
+
+READ chapter 9 of computational modelin
+
+saffran griegpentrog -- relative pitch
+
+page 637 models of melody expectation
+
+Basically article on IDyOM 101
+
+~}
+}
+
+@incollection{baddeleyWorkingMemory1974,
+  title = {Working {{Memory}}},
+  volume = {8},
+  isbn = {978-0-12-543308-2},
+  language = {en},
+  booktitle = {Psychology of {{Learning}} and {{Motivation}}},
+  publisher = {{Elsevier}},
+  author = {Baddeley, Alan D. and Hitch, Graham},
+  year = {1974},
+  pages = {47-89},
+  file = {/Users/davidjohnbaker/Zotero/storage/2SKE5RYL/baddeley1974.pdf},
+  doi = {10.1016/S0079-7421(08)60452-1}
+}
+
 
