--- a/document/01-theoretical-bkgrd-rationale.Rmd
+++ b/document/01-theoretical-bkgrd-rationale.Rmd
@@ -1,15 +1,180 @@
 # Theoretical Background and Rationale {#intro}
 
-## What is melodic dictation? 
+## What is melodic dictation? and Why?
+
+Melodic dictation is the process in which an individual is able to hear a melody, retain it in memory, and then use their knowledge of Western musical notation to recreate the mental image of the melody on paper in a limited time frame.
+For many, becoming profiecent at this task is at the core of developing one's aural skills.
+This link between _ear_ training and it's implied transfer is tacit knowledge and to question the usefulness of this skill might even qualify as heretical.
+It is this ability to think _in_ music that h
+
+Examples about older people who have talked about it.
+
+Despite the century old rhetoric on the importance of developing one's ear, exactly how an individual goes about improving one's _ear_, or even coming up with a concrete, operationalized definition of what one's _ear_ actually is has yet to be fully defined.
+A large part of this probably stems from the fact that many of the skills that are generally grouped under the curricular umbrella of aural skills are extremely complex cognitive processes that are hard to detail at their every step.
+These skills range from being able to identify basic features of the acoustical properties of music, to melodic dictation, polyphonic dictation, harmonic dication, error identification, hearing large scale form, sight singing, sight reading on an individual's primary instrument, as well as score reading, and any keyboard skills that aid in these tasks.
+While this assortment of abilities might seem like a aural potpourri, [@karpinskiAuralSkillsAcquisition2000] has taxonimized the aforementioned list into two larger categories of Listening Skills and Reading and Performing Skills.
+In his seminal text, he establishes multiple helpful that I will refer to throughout the course of this dissertation.
+
+
+Stuff about the truly aural skills.
+
+In addition to his bifurcation of arual skills into Listening and Reading/Performing skills, Karpinski devotes an entire chapter to the study of melodic dictation, providing a verbal model for how he describes the component parts and process as a whole.
+
 ### Describe process
+
+* Need to talk about chunking 
+
+Karpinski's chapter on Aural Skills culminates in a flowchart, Figure 3.1 in his textbook reporduced below, that schematizes how he believes the process to work. 
+
+Upon listenign to a melody,
+
 ### Karpinski schematic of it (as verbal model, problems)
+
+Karpinski's schmatization of melodic dictation can generally be conceptualized as process that consists of the following four steps:
+
+* Hear
+* Remember
+* Understand
+* Notate
+
+For Karpinski, most of the cognitive action happens in the understand process, which is the only subprocess that he groups into two differnt sub-processes: one foo understanding the temporal aspects of music (e.g. pulse, meter, rhythmic proportions) and another for understand the pitch parameters (e.g. tonci, scale degree of starting pitch, scale degree of subsequnt pitches).
+The process is looped over with every hearing, and Karpinski suggests that the listener will use some sort of chunking of melodies in order to hear the melody and to then notate it. 
+
 #### Verbal model, has problems, OK for pedagogy
+
+As a verbal model, Karpinski's model of dictation makes sense and breaks down a very complicated cognitive process into discrete, sequential steps.
+This model, whether or not Karpinski intented it to be an actual cognitive model, I don't know, assumes serial processing of information and does not specify any of the actual parameters for each of the steps.
+This model serves as a great stepping off point for this dissertation, and its good for me that he didn't actually specificy any of the actual parameters, he just said certain things happen and gave an approximate order of the whole thing.
+He talks about a lot of the parameters leading up to it all,
+Even talks about things like representation and other paramters that are going to influence it all.
+Did not attempt to pin down any of the exact parameters of his model, but this is just me wanting to forshadown Chapter 6 where I take each of these issues and implement them in a computational model. 
+While covering many bases, one of the problems with using a verbal model as opposed to a computational one is that by not specificying exaclty what happens when and how everything is represented, the model can manifest itself in a multiude of different ways.
+
+Take for example the often cited model of working memory by Alan Baddely and Grahm Hitch which posits a modular view of workign memory capcacity [@baddeleyWorkingMemory1974].
+As discussed in CITE, although the model only has X amount of distinctive systems, the fact that they left it to be a verbal model of memory, and did not tack down exactly how each parameter functions, when built as computational model actually ends up yielding 156 different models. 
+While I will reseve discussing how many possible models might exists as derrived from the Karpinski for Chapter 6, it is suffice to say that clearly establishing the degree to which part of the model contributes in concrete way only helps with furthering the literature.
+
+
+
 #### Verbal model, no individual differnces tho literture to suggest
+
+One thing that is lacking in the Karpinski model are any sort of individual differences.
+A wealth of literature from music perception and cognition suggests that musical training has effects on how people perform in musical tasks TRAIN OF CITATIONS HERE.
+Given the evidence that individual differences play a role here, there should be some sort of way of incorporating them into a model of melodic dictation. 
+
 #### Computational model to be introduced
+
+From an empirical standpoint, both the task as well as the process of melodic dictation as depicted by Karpinksi resemble something that can be turned into an experiment, as well as a computational model. 
+This dissertation seeks to explore the degree to which methodologies from cognitive psychology and computational musicology are able to further this literature and take the next logical step in terms of understanding aural skills. 
+
+
+* Need to talk about extractive listening in the melodic dictation process
+* Also need to talk about how if you look at melodic dictation as active process... helpfullllllll?
+
+
+Find Karpinksi 1990 on his model ......
+
+Given work from Karpinksi, we know that the following factors play a role in this extractive listening process 
+
+* Hearing -- actual playing of melody
+* Short Term Melodic Memory 
+* Extractive Listening 
+* Chunking 
+* Meter and Rhythm
+* Rhythm Solimization and Understanding
+* Pitch -- representation and contour, solimization
+* Notation -- clealry need to know how it all works 
+* Tempo
+* Length and Number of Playing
+* Duration between Playing 
+
+* he puts forth chunking formula on page 99
+
+* is it OK to say that he leaves out difficulty of melody
+* is it OK to say that he leaves out individual differences
+
+* is rhthmic solimization just the same as LTM 
+
 ### Clearly this is psychological problem with different item level difficulty   
+
+When viewed from a pedagogical stand point, espcielaly given how litle time people have, it would basically be impossible to attend to each of these things in a gradient fashion in the standard 15 week semester that people have. 
+When people teach this, need to rely very much on intuition and basically adjust to the level of your class and syllabus and whatever on the fly in order to convey the most amount of musical materials possible. 
+
+Conversly, when viewed from an experimental standpoint, each of the above mentioned processes is bascially an experimental parameter waiting to be investigated.
+Additionally, the process that is put forth by KARPINSKI 1999 provides a stepping off point for positing some sort of comutational model.
+Going to add substatinally to it in that going to take into account both how difficulty the melodies are, something we  have intiutive understanding of, but could be operationalized, and also going to try to model individual differences based on factors that prior literature would suggest are different in individuals and should be considered in any sort of modeling going forward. 
+In addition to these above parameters discussed by Karpinski, now review other factors that could then contribute to this process.
+
 #### Individual Factors to contribute 
+
+From an individual stand point, can bifurcate factors broadly into *cognitive factors*, or factors of people that are relatively consistent over people or basically like fixed effects things (use definiton of what is a fixed effect); and the other side of this would be things that would have to be delt with that change with training and exposure. 
+Going to refer to this second set of things as *Environmental* factors. 
+Is there a better way to talk about this as nature vs nurture.
+Addiitonally need to then mention that there are of course epigenitic factors where both of these parameters might interact with one another. 
+For example, might then imagine that someone with higher cognitive abilitty, lots of training that was put forward by their parents, as well as tons of musical training, and personality traits that are more likely to learn more (daniels paper on that) might be different in terms of resutls than someone with lower cognitive abilities, no training, low SES, and a general inclination not to even take music lessons. 
+While obvious, what will eventually be of interest is the degree to which each of these things contributes to the final models.
+Also gives us a better idea about pedagogy and what not. 
+
 #### Musical factors to contribute
+
+In addition to differences at the individual level, there are also musical level characteristics.
+In this category it is also worth taxonimizing the musical characterstics into two categories as well.
+On one hand we have the structural aspects of the melody itself.
+These are aspects of the melody that would remain invariant when written down on a score.
+Reading from left to right, would be things like range, key, time signature, intervals, amount of notes, contour of the melody, tonal properties, standardized note density.
+Then the other side would be musical features that I am going to deem as experiemntal features of the melody.
+These are aspects of the structure of hte melody that you can then warp within the context of a melodic dictiation such as tempo, which then refelcts note density, timbral qualities, how many times the melody is played, the space between hearings. 
+This is not a categorial divide, while I put something like range as key of the melody as structural, you could imagine that you could have hte same interval invariant structure of a melody , perhaps Twinkle, Twinkle little star begginging on C2 noteated in bass cleff, but then imagine the the same "melody" being played two and a half octaves up on F#4, and transposed to minor and played quicker leading ot a phenomenologically similar experience, but not the same.
+I taxonimze them early on, but again note that a model of this should be able withstand the multitude of patterns that exist. 
+
 #### Make a Model of them 
+
+Given all of these factors that then go into the melodic dictaiton process, the remainder of this chapter will detail previous reserach that has gone into each of these factors.
+Talking about each one will provide rationale for why it should be further investigated if we are to better understand melodic dictation.
+Beginning with *cognitive factors* two levels, then go on to talk about *musical features*.
+After discussing both and their two subcompoents as I have taxonimzed them, offer a brief discussion on how it's bad to think about these as just latent abilities.
+Instead talk about thinking about modeling melodic dictaiton, in terms of ACTUAL MODELING, as polymorphic conceptualization of aural skills. 
+This is important because how we talk about and model things reflects or values and often it will get in the way of stuff. 
+
+```{r}
+library(DiagrammeR)
+
+grViz("
+     digraph boxes_and_circles {
+
+  # a 'graph' statement
+  graph [overlap = true, fontsize = 10]
+
+  # several 'node' statements
+  node [shape = box,
+        fontname = Helvetica]
+  Individual ; Musical ; Cognitive ; Environmental ; Structural ; Experimental 
+
+  node [shape = circle] // sets as circles
+  WMC; Gf; CowanList; Musical_Training; Aural_Training; 
+  Interval_Structure; Times_Played; Tempo; AuralSkills
+
+  # several 'edge' statements
+  AuralSkills -> Individual
+  AuralSkills -> Musical
+  Individual -> Cognitive
+  Individual -> Environmental
+  Musical -> Structural
+  Musical -> Experimental
+  Cognitive -> WMC
+  Cognitive -> Gf
+  Cognitive -> CowanList
+  Environmental -> Musical_Training
+  Environmental -> Aural_Training
+  Structural -> Interval_Structure 
+  Experimental -> Times_Played
+  Experimental -> Tempo
+} 
+      
+      ")
+
+```
+
 ## Cognitive Factors (MT and it selection bias)
 ### Working Memory Capacity
 #### Papers that suggest WMC plays a role
